🐛 FIX: Pop-up works now